[package]
name = "mcbe-text-impact"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcbe-text-impact"
path = "src/main.rs"

[[example]]
name = "render_test"
path = "examples/render_test.rs"

[[example]]
name = "comparison_test"
path = "examples/comparison_test.rs"

[dependencies]
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
actix-web = { version = "4", features = ["compress-brotli", "compress-gzip"] }
actix-files = "0.6"
env_logger = "0.10"
log = "0.4"
